# dlt

./: README.md  pyproject.toml  taxi_pipeline_pipeline.duckdb
Homework/: README.md  dlt_homework.md
Homework/notebooks/: homework_notebook.ipynb  marimo_test_notebook.py
Homework/scripts/: explore_api.py  taxi_pipeline.py
Homework/taxi-pipeline/: homework.ipynb  taxi_pipeline.py  taxi_pipeline_pipeline.py
workshop/: dlt_Pipeline_Overview.ipynb  main.py
