[project]
name = "dlt-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb,workspace]>=1.22.1",
    "ibis-framework[duckdb]>=12.0.0",
    "marimo>=0.20.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
]
